parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> l_comando
Rule 2     l_comando -> l_comando comando
Rule 3     l_comando -> comando
Rule 4     comando -> c_create
Rule 5     comando -> c_delete
Rule 6     comando -> c_copy
Rule 7     comando -> c_transfer
Rule 8     comando -> c_rename
Rule 9     comando -> c_modify
Rule 10    comando -> c_backup
Rule 11    comando -> c_recovery
Rule 12    comando -> c_delete_all
Rule 13    comando -> c_open
Rule 14    parametro_name -> SEPARADOR NAME FLECHA name_parametros
Rule 15    name_parametros -> NOMBRE_ARCHIVO
Rule 16    name_parametros -> NOMBRE_ARCHIVO_COMILLAS
Rule 17    name_parametros -> DIRECTORIO_CON_ARCHIVO
Rule 18    name_parametros -> CADENA
Rule 19    parametro_body -> SEPARADOR BODY FLECHA CADENA
Rule 20    parametro_path -> SEPARADOR PATH FLECHA path_parametros
Rule 21    path_parametros -> rutas_solo_directorios
Rule 22    path_parametros -> DIRECTORIO_CON_ARCHIVO
Rule 23    rutas_solo_directorios -> SOLO_DIRECTORIO
Rule 24    parametro_type -> SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO
Rule 25    parametro_from -> SEPARADOR FROM FLECHA path_parametros
Rule 26    parametro_to -> SEPARADOR TO FLECHA rutas_solo_directorios
Rule 27    parametro_type_to -> SEPARADOR TYPE_TO FLECHA TIPO_ALMACENAMIENTO
Rule 28    parametro_type_from -> SEPARADOR TYPE_FROM FLECHA TIPO_ALMACENAMIENTO
Rule 29    parametro_ip -> SEPARADOR IP FLECHA DIRECCION_IP
Rule 30    parametro_port -> SEPARADOR PORT FLECHA NUMERO_PUERTO
Rule 31    posible_parametro_create -> parametro_name
Rule 32    posible_parametro_create -> parametro_path
Rule 33    posible_parametro_create -> parametro_body
Rule 34    posible_parametro_create -> parametro_type
Rule 35    c_create -> CREATE posible_parametro_create posible_parametro_create posible_parametro_create posible_parametro_create
Rule 36    posible_parametro_delete -> parametro_path
Rule 37    posible_parametro_delete -> parametro_name
Rule 38    posible_parametro_delete -> parametro_type
Rule 39    c_delete -> DELETE posible_parametro_delete posible_parametro_delete posible_parametro_delete
Rule 40    c_delete -> DELETE posible_parametro_delete posible_parametro_delete
Rule 41    posible_parametro_copy -> parametro_from
Rule 42    posible_parametro_copy -> parametro_to
Rule 43    posible_parametro_copy -> parametro_type_to
Rule 44    posible_parametro_copy -> parametro_type_from
Rule 45    c_copy -> COPY posible_parametro_copy posible_parametro_copy posible_parametro_copy posible_parametro_copy
Rule 46    posible_parametro_transfer -> parametro_from
Rule 47    posible_parametro_transfer -> parametro_to
Rule 48    posible_parametro_transfer -> parametro_type_to
Rule 49    posible_parametro_transfer -> parametro_type_from
Rule 50    c_transfer -> TRANSFER posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer
Rule 51    posible_parametro_rename -> parametro_path
Rule 52    posible_parametro_rename -> parametro_name
Rule 53    posible_parametro_rename -> parametro_type
Rule 54    c_rename -> RENAME posible_parametro_rename posible_parametro_rename posible_parametro_rename
Rule 55    posible_parametro_modify -> parametro_path
Rule 56    posible_parametro_modify -> parametro_body
Rule 57    posible_parametro_modify -> parametro_type
Rule 58    c_modify -> MODIFY posible_parametro_modify posible_parametro_modify posible_parametro_modify
Rule 59    posible_parametro_backup -> parametro_type_to
Rule 60    posible_parametro_backup -> parametro_type_from
Rule 61    posible_parametro_backup -> parametro_ip
Rule 62    posible_parametro_backup -> parametro_port
Rule 63    posible_parametro_backup -> parametro_name
Rule 64    c_backup -> BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
Rule 65    c_backup -> BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
Rule 66    c_backup -> BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup
Rule 67    posible_parametro_recovery -> parametro_type_to
Rule 68    posible_parametro_recovery -> parametro_type_from
Rule 69    posible_parametro_recovery -> parametro_ip
Rule 70    posible_parametro_recovery -> parametro_port
Rule 71    posible_parametro_recovery -> parametro_name
Rule 72    c_recovery -> RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
Rule 73    c_recovery -> RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
Rule 74    c_recovery -> RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
Rule 75    c_delete_all -> DELETE_ALL parametro_type
Rule 76    posible_parametro_open -> parametro_type
Rule 77    posible_parametro_open -> parametro_ip
Rule 78    posible_parametro_open -> parametro_port
Rule 79    posible_parametro_open -> parametro_name
Rule 80    c_open -> OPEN posible_parametro_open posible_parametro_open posible_parametro_open posible_parametro_open
Rule 81    c_open -> OPEN posible_parametro_open posible_parametro_open posible_parametro_open
Rule 82    c_open -> OPEN posible_parametro_open posible_parametro_open

Terminals, with rules where they appear

BACKUP               : 64 65 66
BODY                 : 19
CADENA               : 18 19
COPY                 : 45
CREATE               : 35
DELETE               : 39 40
DELETE_ALL           : 75
DIRECCION_IP         : 29
DIRECTORIO_CON_ARCHIVO : 17 22
FLECHA               : 14 19 20 24 25 26 27 28 29 30
FROM                 : 25
IP                   : 29
MODIFY               : 58
NAME                 : 14
NOMBRE_ARCHIVO       : 15
NOMBRE_ARCHIVO_COMILLAS : 16
NUMERO_PUERTO        : 30
OPEN                 : 80 81 82
PATH                 : 20
PORT                 : 30
RECOVERY             : 72 73 74
RENAME               : 54
SEPARADOR            : 14 19 20 24 25 26 27 28 29 30
SOLO_DIRECTORIO      : 23
TIPO_ALMACENAMIENTO  : 24 27 28
TO                   : 26
TRANSFER             : 50
TYPE                 : 24
TYPE_FROM            : 28
TYPE_TO              : 27
error                : 

Nonterminals, with rules where they appear

c_backup             : 10
c_copy               : 6
c_create             : 4
c_delete             : 5
c_delete_all         : 12
c_modify             : 9
c_open               : 13
c_recovery           : 11
c_rename             : 8
c_transfer           : 7
comando              : 2 3
inicio               : 0
l_comando            : 1 2
name_parametros      : 14
parametro_body       : 33 56
parametro_from       : 41 46
parametro_ip         : 61 69 77
parametro_name       : 31 37 52 63 71 79
parametro_path       : 32 36 51 55
parametro_port       : 62 70 78
parametro_to         : 42 47
parametro_type       : 34 38 53 57 75 76
parametro_type_from  : 44 49 60 68
parametro_type_to    : 43 48 59 67
path_parametros      : 20 25
posible_parametro_backup : 64 64 64 64 64 65 65 65 65 66 66 66
posible_parametro_copy : 45 45 45 45
posible_parametro_create : 35 35 35 35
posible_parametro_delete : 39 39 39 40 40
posible_parametro_modify : 58 58 58
posible_parametro_open : 80 80 80 80 81 81 81 82 82
posible_parametro_recovery : 72 72 72 72 72 73 73 73 73 74 74 74
posible_parametro_rename : 54 54 54
posible_parametro_transfer : 50 50 50 50
rutas_solo_directorios : 21 26

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . l_comando
    (2) l_comando -> . l_comando comando
    (3) l_comando -> . comando
    (4) comando -> . c_create
    (5) comando -> . c_delete
    (6) comando -> . c_copy
    (7) comando -> . c_transfer
    (8) comando -> . c_rename
    (9) comando -> . c_modify
    (10) comando -> . c_backup
    (11) comando -> . c_recovery
    (12) comando -> . c_delete_all
    (13) comando -> . c_open
    (35) c_create -> . CREATE posible_parametro_create posible_parametro_create posible_parametro_create posible_parametro_create
    (39) c_delete -> . DELETE posible_parametro_delete posible_parametro_delete posible_parametro_delete
    (40) c_delete -> . DELETE posible_parametro_delete posible_parametro_delete
    (45) c_copy -> . COPY posible_parametro_copy posible_parametro_copy posible_parametro_copy posible_parametro_copy
    (50) c_transfer -> . TRANSFER posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer
    (54) c_rename -> . RENAME posible_parametro_rename posible_parametro_rename posible_parametro_rename
    (58) c_modify -> . MODIFY posible_parametro_modify posible_parametro_modify posible_parametro_modify
    (64) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (65) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (66) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (72) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (73) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (74) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (75) c_delete_all -> . DELETE_ALL parametro_type
    (80) c_open -> . OPEN posible_parametro_open posible_parametro_open posible_parametro_open posible_parametro_open
    (81) c_open -> . OPEN posible_parametro_open posible_parametro_open posible_parametro_open
    (82) c_open -> . OPEN posible_parametro_open posible_parametro_open

    CREATE          shift and go to state 14
    DELETE          shift and go to state 15
    COPY            shift and go to state 16
    TRANSFER        shift and go to state 17
    RENAME          shift and go to state 18
    MODIFY          shift and go to state 19
    BACKUP          shift and go to state 20
    RECOVERY        shift and go to state 21
    DELETE_ALL      shift and go to state 22
    OPEN            shift and go to state 23

    inicio                         shift and go to state 1
    l_comando                      shift and go to state 2
    comando                        shift and go to state 3
    c_create                       shift and go to state 4
    c_delete                       shift and go to state 5
    c_copy                         shift and go to state 6
    c_transfer                     shift and go to state 7
    c_rename                       shift and go to state 8
    c_modify                       shift and go to state 9
    c_backup                       shift and go to state 10
    c_recovery                     shift and go to state 11
    c_delete_all                   shift and go to state 12
    c_open                         shift and go to state 13

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> l_comando .
    (2) l_comando -> l_comando . comando
    (4) comando -> . c_create
    (5) comando -> . c_delete
    (6) comando -> . c_copy
    (7) comando -> . c_transfer
    (8) comando -> . c_rename
    (9) comando -> . c_modify
    (10) comando -> . c_backup
    (11) comando -> . c_recovery
    (12) comando -> . c_delete_all
    (13) comando -> . c_open
    (35) c_create -> . CREATE posible_parametro_create posible_parametro_create posible_parametro_create posible_parametro_create
    (39) c_delete -> . DELETE posible_parametro_delete posible_parametro_delete posible_parametro_delete
    (40) c_delete -> . DELETE posible_parametro_delete posible_parametro_delete
    (45) c_copy -> . COPY posible_parametro_copy posible_parametro_copy posible_parametro_copy posible_parametro_copy
    (50) c_transfer -> . TRANSFER posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer
    (54) c_rename -> . RENAME posible_parametro_rename posible_parametro_rename posible_parametro_rename
    (58) c_modify -> . MODIFY posible_parametro_modify posible_parametro_modify posible_parametro_modify
    (64) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (65) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (66) c_backup -> . BACKUP posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (72) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (73) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (74) c_recovery -> . RECOVERY posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (75) c_delete_all -> . DELETE_ALL parametro_type
    (80) c_open -> . OPEN posible_parametro_open posible_parametro_open posible_parametro_open posible_parametro_open
    (81) c_open -> . OPEN posible_parametro_open posible_parametro_open posible_parametro_open
    (82) c_open -> . OPEN posible_parametro_open posible_parametro_open

    $end            reduce using rule 1 (inicio -> l_comando .)
    CREATE          shift and go to state 14
    DELETE          shift and go to state 15
    COPY            shift and go to state 16
    TRANSFER        shift and go to state 17
    RENAME          shift and go to state 18
    MODIFY          shift and go to state 19
    BACKUP          shift and go to state 20
    RECOVERY        shift and go to state 21
    DELETE_ALL      shift and go to state 22
    OPEN            shift and go to state 23

    comando                        shift and go to state 24
    c_create                       shift and go to state 4
    c_delete                       shift and go to state 5
    c_copy                         shift and go to state 6
    c_transfer                     shift and go to state 7
    c_rename                       shift and go to state 8
    c_modify                       shift and go to state 9
    c_backup                       shift and go to state 10
    c_recovery                     shift and go to state 11
    c_delete_all                   shift and go to state 12
    c_open                         shift and go to state 13

state 3

    (3) l_comando -> comando .

    CREATE          reduce using rule 3 (l_comando -> comando .)
    DELETE          reduce using rule 3 (l_comando -> comando .)
    COPY            reduce using rule 3 (l_comando -> comando .)
    TRANSFER        reduce using rule 3 (l_comando -> comando .)
    RENAME          reduce using rule 3 (l_comando -> comando .)
    MODIFY          reduce using rule 3 (l_comando -> comando .)
    BACKUP          reduce using rule 3 (l_comando -> comando .)
    RECOVERY        reduce using rule 3 (l_comando -> comando .)
    DELETE_ALL      reduce using rule 3 (l_comando -> comando .)
    OPEN            reduce using rule 3 (l_comando -> comando .)
    $end            reduce using rule 3 (l_comando -> comando .)


state 4

    (4) comando -> c_create .

    CREATE          reduce using rule 4 (comando -> c_create .)
    DELETE          reduce using rule 4 (comando -> c_create .)
    COPY            reduce using rule 4 (comando -> c_create .)
    TRANSFER        reduce using rule 4 (comando -> c_create .)
    RENAME          reduce using rule 4 (comando -> c_create .)
    MODIFY          reduce using rule 4 (comando -> c_create .)
    BACKUP          reduce using rule 4 (comando -> c_create .)
    RECOVERY        reduce using rule 4 (comando -> c_create .)
    DELETE_ALL      reduce using rule 4 (comando -> c_create .)
    OPEN            reduce using rule 4 (comando -> c_create .)
    $end            reduce using rule 4 (comando -> c_create .)


state 5

    (5) comando -> c_delete .

    CREATE          reduce using rule 5 (comando -> c_delete .)
    DELETE          reduce using rule 5 (comando -> c_delete .)
    COPY            reduce using rule 5 (comando -> c_delete .)
    TRANSFER        reduce using rule 5 (comando -> c_delete .)
    RENAME          reduce using rule 5 (comando -> c_delete .)
    MODIFY          reduce using rule 5 (comando -> c_delete .)
    BACKUP          reduce using rule 5 (comando -> c_delete .)
    RECOVERY        reduce using rule 5 (comando -> c_delete .)
    DELETE_ALL      reduce using rule 5 (comando -> c_delete .)
    OPEN            reduce using rule 5 (comando -> c_delete .)
    $end            reduce using rule 5 (comando -> c_delete .)


state 6

    (6) comando -> c_copy .

    CREATE          reduce using rule 6 (comando -> c_copy .)
    DELETE          reduce using rule 6 (comando -> c_copy .)
    COPY            reduce using rule 6 (comando -> c_copy .)
    TRANSFER        reduce using rule 6 (comando -> c_copy .)
    RENAME          reduce using rule 6 (comando -> c_copy .)
    MODIFY          reduce using rule 6 (comando -> c_copy .)
    BACKUP          reduce using rule 6 (comando -> c_copy .)
    RECOVERY        reduce using rule 6 (comando -> c_copy .)
    DELETE_ALL      reduce using rule 6 (comando -> c_copy .)
    OPEN            reduce using rule 6 (comando -> c_copy .)
    $end            reduce using rule 6 (comando -> c_copy .)


state 7

    (7) comando -> c_transfer .

    CREATE          reduce using rule 7 (comando -> c_transfer .)
    DELETE          reduce using rule 7 (comando -> c_transfer .)
    COPY            reduce using rule 7 (comando -> c_transfer .)
    TRANSFER        reduce using rule 7 (comando -> c_transfer .)
    RENAME          reduce using rule 7 (comando -> c_transfer .)
    MODIFY          reduce using rule 7 (comando -> c_transfer .)
    BACKUP          reduce using rule 7 (comando -> c_transfer .)
    RECOVERY        reduce using rule 7 (comando -> c_transfer .)
    DELETE_ALL      reduce using rule 7 (comando -> c_transfer .)
    OPEN            reduce using rule 7 (comando -> c_transfer .)
    $end            reduce using rule 7 (comando -> c_transfer .)


state 8

    (8) comando -> c_rename .

    CREATE          reduce using rule 8 (comando -> c_rename .)
    DELETE          reduce using rule 8 (comando -> c_rename .)
    COPY            reduce using rule 8 (comando -> c_rename .)
    TRANSFER        reduce using rule 8 (comando -> c_rename .)
    RENAME          reduce using rule 8 (comando -> c_rename .)
    MODIFY          reduce using rule 8 (comando -> c_rename .)
    BACKUP          reduce using rule 8 (comando -> c_rename .)
    RECOVERY        reduce using rule 8 (comando -> c_rename .)
    DELETE_ALL      reduce using rule 8 (comando -> c_rename .)
    OPEN            reduce using rule 8 (comando -> c_rename .)
    $end            reduce using rule 8 (comando -> c_rename .)


state 9

    (9) comando -> c_modify .

    CREATE          reduce using rule 9 (comando -> c_modify .)
    DELETE          reduce using rule 9 (comando -> c_modify .)
    COPY            reduce using rule 9 (comando -> c_modify .)
    TRANSFER        reduce using rule 9 (comando -> c_modify .)
    RENAME          reduce using rule 9 (comando -> c_modify .)
    MODIFY          reduce using rule 9 (comando -> c_modify .)
    BACKUP          reduce using rule 9 (comando -> c_modify .)
    RECOVERY        reduce using rule 9 (comando -> c_modify .)
    DELETE_ALL      reduce using rule 9 (comando -> c_modify .)
    OPEN            reduce using rule 9 (comando -> c_modify .)
    $end            reduce using rule 9 (comando -> c_modify .)


state 10

    (10) comando -> c_backup .

    CREATE          reduce using rule 10 (comando -> c_backup .)
    DELETE          reduce using rule 10 (comando -> c_backup .)
    COPY            reduce using rule 10 (comando -> c_backup .)
    TRANSFER        reduce using rule 10 (comando -> c_backup .)
    RENAME          reduce using rule 10 (comando -> c_backup .)
    MODIFY          reduce using rule 10 (comando -> c_backup .)
    BACKUP          reduce using rule 10 (comando -> c_backup .)
    RECOVERY        reduce using rule 10 (comando -> c_backup .)
    DELETE_ALL      reduce using rule 10 (comando -> c_backup .)
    OPEN            reduce using rule 10 (comando -> c_backup .)
    $end            reduce using rule 10 (comando -> c_backup .)


state 11

    (11) comando -> c_recovery .

    CREATE          reduce using rule 11 (comando -> c_recovery .)
    DELETE          reduce using rule 11 (comando -> c_recovery .)
    COPY            reduce using rule 11 (comando -> c_recovery .)
    TRANSFER        reduce using rule 11 (comando -> c_recovery .)
    RENAME          reduce using rule 11 (comando -> c_recovery .)
    MODIFY          reduce using rule 11 (comando -> c_recovery .)
    BACKUP          reduce using rule 11 (comando -> c_recovery .)
    RECOVERY        reduce using rule 11 (comando -> c_recovery .)
    DELETE_ALL      reduce using rule 11 (comando -> c_recovery .)
    OPEN            reduce using rule 11 (comando -> c_recovery .)
    $end            reduce using rule 11 (comando -> c_recovery .)


state 12

    (12) comando -> c_delete_all .

    CREATE          reduce using rule 12 (comando -> c_delete_all .)
    DELETE          reduce using rule 12 (comando -> c_delete_all .)
    COPY            reduce using rule 12 (comando -> c_delete_all .)
    TRANSFER        reduce using rule 12 (comando -> c_delete_all .)
    RENAME          reduce using rule 12 (comando -> c_delete_all .)
    MODIFY          reduce using rule 12 (comando -> c_delete_all .)
    BACKUP          reduce using rule 12 (comando -> c_delete_all .)
    RECOVERY        reduce using rule 12 (comando -> c_delete_all .)
    DELETE_ALL      reduce using rule 12 (comando -> c_delete_all .)
    OPEN            reduce using rule 12 (comando -> c_delete_all .)
    $end            reduce using rule 12 (comando -> c_delete_all .)


state 13

    (13) comando -> c_open .

    CREATE          reduce using rule 13 (comando -> c_open .)
    DELETE          reduce using rule 13 (comando -> c_open .)
    COPY            reduce using rule 13 (comando -> c_open .)
    TRANSFER        reduce using rule 13 (comando -> c_open .)
    RENAME          reduce using rule 13 (comando -> c_open .)
    MODIFY          reduce using rule 13 (comando -> c_open .)
    BACKUP          reduce using rule 13 (comando -> c_open .)
    RECOVERY        reduce using rule 13 (comando -> c_open .)
    DELETE_ALL      reduce using rule 13 (comando -> c_open .)
    OPEN            reduce using rule 13 (comando -> c_open .)
    $end            reduce using rule 13 (comando -> c_open .)


state 14

    (35) c_create -> CREATE . posible_parametro_create posible_parametro_create posible_parametro_create posible_parametro_create
    (31) posible_parametro_create -> . parametro_name
    (32) posible_parametro_create -> . parametro_path
    (33) posible_parametro_create -> . parametro_body
    (34) posible_parametro_create -> . parametro_type
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros
    (20) parametro_path -> . SEPARADOR PATH FLECHA path_parametros
    (19) parametro_body -> . SEPARADOR BODY FLECHA CADENA
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 30

    posible_parametro_create       shift and go to state 25
    parametro_name                 shift and go to state 26
    parametro_path                 shift and go to state 27
    parametro_body                 shift and go to state 28
    parametro_type                 shift and go to state 29

state 15

    (39) c_delete -> DELETE . posible_parametro_delete posible_parametro_delete posible_parametro_delete
    (40) c_delete -> DELETE . posible_parametro_delete posible_parametro_delete
    (36) posible_parametro_delete -> . parametro_path
    (37) posible_parametro_delete -> . parametro_name
    (38) posible_parametro_delete -> . parametro_type
    (20) parametro_path -> . SEPARADOR PATH FLECHA path_parametros
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 35

    posible_parametro_delete       shift and go to state 31
    parametro_path                 shift and go to state 32
    parametro_name                 shift and go to state 33
    parametro_type                 shift and go to state 34

state 16

    (45) c_copy -> COPY . posible_parametro_copy posible_parametro_copy posible_parametro_copy posible_parametro_copy
    (41) posible_parametro_copy -> . parametro_from
    (42) posible_parametro_copy -> . parametro_to
    (43) posible_parametro_copy -> . parametro_type_to
    (44) posible_parametro_copy -> . parametro_type_from
    (25) parametro_from -> . SEPARADOR FROM FLECHA path_parametros
    (26) parametro_to -> . SEPARADOR TO FLECHA rutas_solo_directorios
    (27) parametro_type_to -> . SEPARADOR TYPE_TO FLECHA TIPO_ALMACENAMIENTO
    (28) parametro_type_from -> . SEPARADOR TYPE_FROM FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 41

    posible_parametro_copy         shift and go to state 36
    parametro_from                 shift and go to state 37
    parametro_to                   shift and go to state 38
    parametro_type_to              shift and go to state 39
    parametro_type_from            shift and go to state 40

state 17

    (50) c_transfer -> TRANSFER . posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer posible_parametro_transfer
    (46) posible_parametro_transfer -> . parametro_from
    (47) posible_parametro_transfer -> . parametro_to
    (48) posible_parametro_transfer -> . parametro_type_to
    (49) posible_parametro_transfer -> . parametro_type_from
    (25) parametro_from -> . SEPARADOR FROM FLECHA path_parametros
    (26) parametro_to -> . SEPARADOR TO FLECHA rutas_solo_directorios
    (27) parametro_type_to -> . SEPARADOR TYPE_TO FLECHA TIPO_ALMACENAMIENTO
    (28) parametro_type_from -> . SEPARADOR TYPE_FROM FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 41

    posible_parametro_transfer     shift and go to state 42
    parametro_from                 shift and go to state 43
    parametro_to                   shift and go to state 44
    parametro_type_to              shift and go to state 45
    parametro_type_from            shift and go to state 46

state 18

    (54) c_rename -> RENAME . posible_parametro_rename posible_parametro_rename posible_parametro_rename
    (51) posible_parametro_rename -> . parametro_path
    (52) posible_parametro_rename -> . parametro_name
    (53) posible_parametro_rename -> . parametro_type
    (20) parametro_path -> . SEPARADOR PATH FLECHA path_parametros
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 35

    posible_parametro_rename       shift and go to state 47
    parametro_path                 shift and go to state 48
    parametro_name                 shift and go to state 49
    parametro_type                 shift and go to state 50

state 19

    (58) c_modify -> MODIFY . posible_parametro_modify posible_parametro_modify posible_parametro_modify
    (55) posible_parametro_modify -> . parametro_path
    (56) posible_parametro_modify -> . parametro_body
    (57) posible_parametro_modify -> . parametro_type
    (20) parametro_path -> . SEPARADOR PATH FLECHA path_parametros
    (19) parametro_body -> . SEPARADOR BODY FLECHA CADENA
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 55

    posible_parametro_modify       shift and go to state 51
    parametro_path                 shift and go to state 52
    parametro_body                 shift and go to state 53
    parametro_type                 shift and go to state 54

state 20

    (64) c_backup -> BACKUP . posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (65) c_backup -> BACKUP . posible_parametro_backup posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (66) c_backup -> BACKUP . posible_parametro_backup posible_parametro_backup posible_parametro_backup
    (59) posible_parametro_backup -> . parametro_type_to
    (60) posible_parametro_backup -> . parametro_type_from
    (61) posible_parametro_backup -> . parametro_ip
    (62) posible_parametro_backup -> . parametro_port
    (63) posible_parametro_backup -> . parametro_name
    (27) parametro_type_to -> . SEPARADOR TYPE_TO FLECHA TIPO_ALMACENAMIENTO
    (28) parametro_type_from -> . SEPARADOR TYPE_FROM FLECHA TIPO_ALMACENAMIENTO
    (29) parametro_ip -> . SEPARADOR IP FLECHA DIRECCION_IP
    (30) parametro_port -> . SEPARADOR PORT FLECHA NUMERO_PUERTO
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros

    SEPARADOR       shift and go to state 62

    posible_parametro_backup       shift and go to state 56
    parametro_type_to              shift and go to state 57
    parametro_type_from            shift and go to state 58
    parametro_ip                   shift and go to state 59
    parametro_port                 shift and go to state 60
    parametro_name                 shift and go to state 61

state 21

    (72) c_recovery -> RECOVERY . posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (73) c_recovery -> RECOVERY . posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (74) c_recovery -> RECOVERY . posible_parametro_recovery posible_parametro_recovery posible_parametro_recovery
    (67) posible_parametro_recovery -> . parametro_type_to
    (68) posible_parametro_recovery -> . parametro_type_from
    (69) posible_parametro_recovery -> . parametro_ip
    (70) posible_parametro_recovery -> . parametro_port
    (71) posible_parametro_recovery -> . parametro_name
    (27) parametro_type_to -> . SEPARADOR TYPE_TO FLECHA TIPO_ALMACENAMIENTO
    (28) parametro_type_from -> . SEPARADOR TYPE_FROM FLECHA TIPO_ALMACENAMIENTO
    (29) parametro_ip -> . SEPARADOR IP FLECHA DIRECCION_IP
    (30) parametro_port -> . SEPARADOR PORT FLECHA NUMERO_PUERTO
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros

    SEPARADOR       shift and go to state 62

    posible_parametro_recovery     shift and go to state 63
    parametro_type_to              shift and go to state 64
    parametro_type_from            shift and go to state 65
    parametro_ip                   shift and go to state 66
    parametro_port                 shift and go to state 67
    parametro_name                 shift and go to state 68

state 22

    (75) c_delete_all -> DELETE_ALL . parametro_type
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 70

    parametro_type                 shift and go to state 69

state 23

    (80) c_open -> OPEN . posible_parametro_open posible_parametro_open posible_parametro_open posible_parametro_open
    (81) c_open -> OPEN . posible_parametro_open posible_parametro_open posible_parametro_open
    (82) c_open -> OPEN . posible_parametro_open posible_parametro_open
    (76) posible_parametro_open -> . parametro_type
    (77) posible_parametro_open -> . parametro_ip
    (78) posible_parametro_open -> . parametro_port
    (79) posible_parametro_open -> . parametro_name
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO
    (29) parametro_ip -> . SEPARADOR IP FLECHA DIRECCION_IP
    (30) parametro_port -> . SEPARADOR PORT FLECHA NUMERO_PUERTO
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros

    SEPARADOR       shift and go to state 76

    posible_parametro_open         shift and go to state 71
    parametro_type                 shift and go to state 72
    parametro_ip                   shift and go to state 73
    parametro_port                 shift and go to state 74
    parametro_name                 shift and go to state 75

state 24

    (2) l_comando -> l_comando comando .

    CREATE          reduce using rule 2 (l_comando -> l_comando comando .)
    DELETE          reduce using rule 2 (l_comando -> l_comando comando .)
    COPY            reduce using rule 2 (l_comando -> l_comando comando .)
    TRANSFER        reduce using rule 2 (l_comando -> l_comando comando .)
    RENAME          reduce using rule 2 (l_comando -> l_comando comando .)
    MODIFY          reduce using rule 2 (l_comando -> l_comando comando .)
    BACKUP          reduce using rule 2 (l_comando -> l_comando comando .)
    RECOVERY        reduce using rule 2 (l_comando -> l_comando comando .)
    DELETE_ALL      reduce using rule 2 (l_comando -> l_comando comando .)
    OPEN            reduce using rule 2 (l_comando -> l_comando comando .)
    $end            reduce using rule 2 (l_comando -> l_comando comando .)


state 25

    (35) c_create -> CREATE posible_parametro_create . posible_parametro_create posible_parametro_create posible_parametro_create
    (31) posible_parametro_create -> . parametro_name
    (32) posible_parametro_create -> . parametro_path
    (33) posible_parametro_create -> . parametro_body
    (34) posible_parametro_create -> . parametro_type
    (14) parametro_name -> . SEPARADOR NAME FLECHA name_parametros
    (20) parametro_path -> . SEPARADOR PATH FLECHA path_parametros
    (19) parametro_body -> . SEPARADOR BODY FLECHA CADENA
    (24) parametro_type -> . SEPARADOR TYPE FLECHA TIPO_ALMACENAMIENTO

    SEPARADOR       shift and go to state 30

    posible_parametro_create       shift and go to state 77
    parametro_name                 shift and go to state 26
    parametro_path                 shift and go to state 27
    parametro_body                 shift and go to state 28
    parametro_type                 shift and go to state 29

state 26

    (31) posible_parametro_create -> parametro_name .
